# Chimpanzee

./: BACA-AKU.md  CHANGELOG.md  Chimpanzee.cabal  LICENSE  README.md  TODO.md
.github/workflows/: haskell.yml
Jupyter/: affine.ipynb  atbash.ipynb  caesar.ipynb  rot13.ipynb
Labs/: Lab.hs
labs/: atbash-test.hs  caesar-test.hs  rot13-test.hs  test.hs
src/: Affine.hs  Atbash.hs  Caesar.hs  Rot13.hs
src/Chimpanzee/: Affine.hs  Atbash.hs  Caesar.hs  Rot13.hs
src/test/: test-encryption-lower.hs  test-encryption-upper.hs
