cabal-version:      2.4
name:               Chimpanzee
version:            0.1.0.0
synopsis:           Haskell Algorithm Library
description:        Implementation of Algorithm on Haskell Programming Language
homepage:           https://github.com/DevCapacitor/Chimpanzee
bug-reports:        https://github.com/DevCapacitor/Chimpanzee/issues
copyright:          DevCapacitor 2021
license:            BSD-3-Clause
license-file:       LICENSE
author:             DevCapacitor
maintainer:         d.15f@yahoo.com
category:           Data
extra-source-files:
                    CHANGELOG.md
                    README.md

library
    exposed-modules:    Atbash,
                        Rot13
                        Caesar
    hs-source-dirs:     src
    default-language:   Haskell2010
    build-depends:      base ^>=4.14.1.0
    -- Modules included in this library but not exported.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

test-suite test
    hs-source-dirs:     labs
    main-is:            test.hs
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    build-depends:      Chimpanzee,
                        base ^>=4.14.1.0
