cabal-version:      2.4
name:               Chimpanzee
version:            1.0.1
synopsis:           Haskell Algorithm Library
description:        This project aims to implement an algorithm that can be used for anything.
homepage:           https://github.com/aerphanas/Chimpanzee
bug-reports:        https://github.com/aerphanas/Chimpanzee/issues
copyright:          aerphanas 2022
license:            BSD-3-Clause
license-file:       LICENSE
author:             aerphanas
maintainer:         muhamadaviv14@gmail.com
category:           Cryptography
extra-source-files:
                    CHANGELOG.md
                    README.md

library
    exposed-modules:    Atbash,
                        Rot13
                        Caesar
    hs-source-dirs:     src
    default-language:   Haskell2010
    build-depends:      base ^>=4.16.3.0
    -- Modules included in this library but not exported.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

test-suite test
    hs-source-dirs:     labs
    main-is:            test.hs
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    build-depends:      Chimpanzee,
                        base ^>=4.16.3.0
